# natural-language-video-search-system

./: .env.example  .env.sops  .gitignore  .sops.yaml  LICENSE  Makefile  README.md  docker-compose.yml
diagrams/: graph.md  (+3 more)
nlv-search/ai/: .dockerignore  Dockerfile  README.md  pyproject.toml
nlv-search/ai/src/: main.py
nlv-search/ai/src/api/: router.py
nlv-search/ai/src/api/auth/: deps.py
nlv-search/ai/src/api/embed/: __init__.py  router.py
nlv-search/ai/src/api/health/: router.py  schemas.py
nlv-search/ai/src/api/llm/: __init__.py  router.py
nlv-search/ai/src/core/: config.py  logger.py  security.py
nlv-search/ai/src/infra/openrouter/: api.py  client.py
nlv-search/ai/src/infra/tei/: __init__.py  api.py  client.py  schemas.py
nlv-search/ai/src/infra/vllm/: __init__.py  api.py  client.py  schemas.py
nlv-search/ai/tests/: conftest.py
nlv-search/ai/tests/integration/: test_ai_api.py
nlv-search/backend/: Dockerfile  README.md  pyproject.toml
nlv-search/backend/src/: main.py
nlv-search/backend/src/api/: router.py
nlv-search/backend/src/api/auth/: deps.py  router.py  schemas.py
nlv-search/backend/src/api/conversational_search/: router.py  schemas.py
nlv-search/backend/src/api/health/: __init__.py  router.py  schemas.py
nlv-search/backend/src/api/media/: router.py
nlv-search/backend/src/core/: auth.py  config.py  security.py
nlv-search/backend/src/domain/: __init__.py  attributes.py  entity.py  entity_naming.py  enums.py
nlv-search/backend/src/infra/ai/: __init__.py  client.py
nlv-search/backend/src/infra/ai/embed/: api.py  schemas.py
nlv-search/backend/src/infra/ai/health/: api.py  schemas.py
nlv-search/backend/src/infra/ai/langchain/: __init__.py  llm.py
nlv-search/backend/src/infra/ai/llm/: api.py  schemas.py
nlv-search/backend/src/infra/minio/: __init__.py  database.py
nlv-search/backend/src/infra/postgres/: database.py
nlv-search/backend/src/infra/qdrant/: database.py
nlv-search/backend/src/infra/redis/: auth_blacklist.py  database.py
nlv-search/backend/src/infra/vms/: __init__.py  api.py  client.py  mappers.py  schemas.py
nlv-search/backend/src/prompts/conversational_search/: __init__.py  parsing.py  resolution.py  respond.py
nlv-search/backend/src/services/auth/: service.py
nlv-search/backend/src/services/conversational_search/: __init__.py  graph.py  service.py  state.py  utils.py
nlv-search/backend/src/services/entities_populator/: __init__.py  collections.py  qdrant_upsert.py  service.py
nlv-search/backend/tests/: conftest.py
nlv-search/backend/tests/integration/: conftest.py  test_auth_api.py  test_pipeline_full.py
nlv-search/backend/tests/unit/: test_auth_logic.py  test_event_filter_builder.py  test_graph_routers.py  test_parsing_prompt.py  test_qdrant_upsert.py
(+86 files in other folders)
