[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlv-search-ai"
version = "0.1.0"
description = "AI service for natural language video search."
requires-python = ">=3.10"
authors = [{ name = "Grigoriy Bezrukov" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4",
    "black>=24.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/core", "src/infra"]
include = ["src/main.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "integration: requires real external dependencies (docker compose)",
]
