[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "nlv-search-backend"
version = "0.1.0"
description = "FastAPI backend for natural language video search."
requires-python = ">=3.10"
authors = [{ name = "Grigoriy Bezrukov" }]

dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.31.1",

    "pydantic==2.11.3",
    "pydantic-settings==2.5.2",

    "email-validator==2.2.0",
    "httpx==0.27.2",
    "loguru==0.7.2",

    "asyncpg==0.29.0",

    "minio==7.2.8",
    "aioboto3>=13.0",
    "types-aiobotocore-s3>=2.0",

    "qdrant-client==1.11.3",

    "SQLAlchemy==2.0.32",

    "bcrypt==4.0.1",

    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",

    "redis==5.0.7",

    "tenacity>=8.2",

    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "psycopg[binary,pool]>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "black==24.8.0",
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "fakeredis==2.23.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/core", "src/infra", "src/services", "src/prompts", "src/domain"]
include = ["src/main.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "integration: requires real external dependencies (docker compose)",
]
